fix nav logo on mobile form

--- a/styles.css
+++ b/styles.css
@@ -288,6 +288,10 @@ a {
     height: 100%;
 }
 
+#navbar-logo {
+    width: 50%;
+}
+
 #home-link-logo {
     width: 75%;
 }
